--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,12 @@
-#devops
+Flask==2.2.2
+numpy==1.24.1
+pip==21.1.2
+pytest==7.2.1
+scikit-learn==1.2.1
+scipy==1.10.0
 black==22.3.0
-click==8.1.3 
-pytest==7.1.3
-pytest-cov==4.0.0
-pylint==2.15.3
-boto3==1.24.87
-#web
-fastapi==0.85.0
-uvicorn==0.18.3
+pylint==2.3.1
+
 
 
 
