--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,11 @@ scikit-learn==1.2.1
 scipy==1.10.0
 black==22.3.0
 pylint==2.3.1
+h11==0.14.0
+pydantic==1.10.4
+starlette==0.20.4
+typing-extensions==4.4.0
+uvicorn==0.18.3
 
 
 
